
* t2 in bam(...,discrete=TRUE) - not treated as tensor products at 
present, and reparameterization needs checking (also for bam). 

* bam(...,discrete=TRUE) has no option to use the identical
  discretizaton to that used in fitting when predicting.

1.9-1

* Correction of ziplss residual computation - incorrect probability of non
  zero used. Thanks to Xiao Liang. 

1.9-0

*** NCV smoothing parameter estimation now available for most models. See ?NCV.

*** 'gfam' allows reponse variables to be from several different families. 

* Restriction that number of coefficients must be fewer than number of data 
  removed. 

* Fix to tensor product constructor to allow matrix factor arguments to be 
  handled correctly (previously failed). Thanks to Dave Miller.

* removed argument 'pers' from 'plot.gam' (deprecated since 1.8-23, Nov 2017).

* removed "nlm.fd" optimizer (deprecated since 1.8-19, Sept 2017). 

* removed discrete method prediction from discrete bam objects fitted 
  before 1.8-32 (deprecated since then). 


* 'multinom' variance fix for K>=3 cases. A counter was initialized in the wrong
  place. Thanks to Max Goplerud for finding and reporting this.

* NCV variance estimation improvements + na handling.

* 'in.out' argument added for 'bam'.

* slight internal change to mgcv:::get.var to enable user defined functions 
  in arguments of smooths to work. 

* smooth2random tweak to guarantee same eigenvector sign everytime for same 
  problem (needed by some developers who don't want to carry the original 
  transform around).

* Some unregistered methods fixes.

* tests directory removed, as check time was tripping up every CRAN submission.

* coxph memory error fix - could make bfgs fitting fail.

1.8-42

* One remaining old style C declaration fixed.

1.8-41

** 'cnorm' family added for left, right, interval or un censored Gaussian 
  data. Useful for log normal Accelerated Failure Time models, Tobit 
  regression, rounded data etc.
